--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
   </head>
 
   <body>
-    <h1><a href="https://yhara.github.io/dxopal-game/">Moved</a></h1>
+    <h1>DXOpal</h1>
+    <p>
+    <a href='https://github.com/yhara/dxopal'>DXOpal</a> is a
+    game development framework for <a href='http://opalrb.com'>Opal</a>,
+    API compatible to <a href='http://dxruby.osdn.jp/'>DXRuby</a>.
+    </p>
+    <h2>Examples
+    <ul>
+      <li>
+        <a href="examples/apple_catcher/index.html">Apple Catcher</a>
+      </li>
+      <li>
+        <a href="https://yhara.github.io/dxopal-game/">dxopal-game</a>
+      </li>
+    </ul>
   </body>
 </html>
 
