fix: example did not work on the website

--- a/examples/apple_catcher/index.html
+++ b/examples/apple_catcher/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset= "utf-8" />
     <title>DXOpal demo</title>
-    <script type="text/javascript" src="../../dxopal.js"></script>
+    <script type="text/javascript" src="../../build/dxopal.js"></script>
     <script type="text/ruby" src="main.rb"></script>
   </head>
 
