--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>DXOpal</h1>
     <p>
-    <a href='https://github.com/yhara/dxopal'>DXOpal</a> is a
+    DXOpal (<a href='https://github.com/yhara/dxopal'>github</a>) is a
     game development framework for <a href='http://opalrb.com'>Opal</a>,
     API compatible to <a href='http://dxruby.osdn.jp/'>DXRuby</a>.
     </p>
