--- a/examples/apple_catcher/index.html
+++ b/examples/apple_catcher/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <h1><a href="https://github.com/yhara/dxopal">DXOpal</a> demo</h1>
+    <h1><a href="https://yhara.github.io/dxopal/">DXOpal</a> demo</h1>
     <canvas id="canvas"></canvas>
     <input type='button' id='pause' value='Pause/Resume'>
   </body>
