--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         <a href="examples/apple_catcher/index.html">Apple Catcher</a>
       </li>
       <li>
+        <a href="examples/triangles/index.html">Collision detection</a>
+      </li>
+      <li>
+        <a href="examples/matter/index.html">Physics</a> (powered by Matter.js)
+      </li>
+      <li>
         <a href="https://yhara.github.io/dxopal-game/">dxopal-game</a>
       </li>
     </ul>
