--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
         <a href="examples/apple_catcher/index.html">Apple Catcher</a>
       </li>
       <li>
-        <a href="examples/triangles/index.html">Collision detection</a>
+        <a href="examples/collision/index.html">Collision detection</a>
       </li>
       <li>
-        <a href="examples/matter/index.html">Physics</a> (powered by Matter.js)
+        <a href="examples/triangles/index.html">STG-like demo</a>
+      </li>
+      <li>
+        <a href="examples/matter/index.html">Physics</a> (experimental / powered by Matter.js)
       </li>
       <li>
         <a href="https://yhara.github.io/dxopal-game/">dxopal-game</a>
