--- a/index.html
+++ b/index.html
@@ -3,33 +3,22 @@
   <head>
     <meta charset= "utf-8" />
     <title>DXOpal demo</title>
+
+    <link href='https://fonts.googleapis.com/css?family=Arvo:400,700,400italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="vendor/pages-themes-dinky-14e8031/_site/assets/css/style.css">
+    <script src="vendor/pages-themes-dinky-14e8031/_site/assets/js/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   </head>
 
   <body>
-    <h1>DXOpal</h1>
-    <p>
-    DXOpal (<a href='https://github.com/yhara/dxopal'>github</a>) is a
-    game development framework for <a href='http://opalrb.com'>Opal</a>,
-    API compatible to <a href='http://dxruby.osdn.jp/'>DXRuby</a>.
-    </p>
-    <h2>Examples
-    <ul>
-      <li>
-        <a href="examples/apple_catcher/index.html">Apple Catcher</a>
-      </li>
-      <li>
-        <a href="examples/collision/index.html">Collision detection</a>
-      </li>
-      <li>
-        <a href="examples/triangles/index.html">STG-like demo</a>
-      </li>
-      <li>
-        <a href="examples/matter/index.html">Physics</a> (experimental / powered by Matter.js)
-      </li>
-      <li>
-        <a href="https://yhara.github.io/dxopal-game/">dxopal-game</a>
-      </li>
-    </ul>
+    <div class="wrapper">
+      <header>
+        <h1 class="header"><a href='index.html'>DXOpal</a></h1>
+        <p class="header">
+        <a href='doc/en/index.html'>English</a> | <a href='doc/ja/index.html'>日本語</a>
+        </p>
+      </header>
+    </div>
   </body>
 </html>
 
