--- a/examples/triangles/index.html
+++ b/examples/triangles/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <h1><a href="https://yhara.github.io/dxopal/">DXOpal</a> demo</h1>
-    <canvas id="canvas"></canvas><br>
+    <canvas id="dxopal-canvas"></canvas><br>
     <input type='button' id='pause' value='Pause/Resume'>
 
     <h2>Source code</h2>
