Remove matter.js from dxopal.js

--- a/examples/matter/index.html
+++ b/examples/matter/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset= "utf-8" />
     <title>DXOpal demo</title>
+    <script type="text/javascript" src="../_vendor/matter-0.10.0.js"></script>
     <script type="text/javascript" src="../../build/dxopal.js"></script>
     <script type="text/ruby">
       DXOpal.dump_error{ require_remote 'main.rb' }
