--- a/examples/multi_touch/index.html
+++ b/examples/multi_touch/index.html
@@ -4,7 +4,7 @@
     <meta charset= "utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
     <title>DXOpal game</title>
-    <script type="text/javascript" src="../../build/dxopal.min.js"></script>
+    <script type="text/javascript" src="../../build/dxopal.js"></script>
     <script type="text/ruby">
       DXOpal.dump_error{ require_remote 'main.rb' }
     </script>
